--- a/src/css/navBar.css
+++ b/src/css/navBar.css
@@ -83,22 +83,6 @@ a {
   z-index: 50;
 }
 
-/*Center the lines on menubutton*/
-/* .bars {
-  margin-left: 10px;
-  margin-top: 8px;
-} */
-
-/*Hamburger "icon"*/
-/* .bar1,
-.bar2,
-.bar3 {
-  width: 25px;
-  height: 2px;
-  background-color: #373736;
-  margin: 3px;
-} */
-
 .genreMenuContainer {
   position: absolute;
   top: 0.7%;
